# 4S_LFP_BMS

./: README.md
BMS_GUI/: README.MD
BMS_GUI/BMS_GUI_x64/: README.MD
Output/: BOM_PCB_4S_LFP_BMS__2023-03-03.csv  README.md
Output/BMS_HW_v1/: PickAndPlace_PCB_4S_LFP_BMS__2023-03-03.csv
Output/BMS_HW_v2/BOM/: Bill of Materials-ActiveBOM.xlsx
Output/BMS_HW_v2/Gerber/: LFP_4S_BMS_PCB-macro.APR_LIB  LFP_4S_BMS_PCB.EXTREP  LFP_4S_BMS_PCB.G1  LFP_4S_BMS_PCB.G2  LFP_4S_BMS_PCB.GBL  LFP_4S_BMS_PCB.GBO  LFP_4S_BMS_PCB.GBP  LFP_4S_BMS_PCB.GBS  LFP_4S_BMS_PCB.GD1  LFP_4S_BMS_PCB.GG1  LFP_4S_BMS_PCB.GPB  LFP_4S_BMS_PCB.GPT  LFP_4S_BMS_PCB.GTL  LFP_4S_BMS_PCB.GTO  LFP_4S_BMS_PCB.GTP  LFP_4S_BMS_PCB.GTS  LFP_4S_BMS_PCB.REP  LFP_4S_BMS_PCB.RUL  LFP_4S_BMS_PCB.apr
Output/BMS_HW_v2/NC Drill/: LFP_4S_BMS_PCB.DRR  LFP_4S_BMS_PCB.LDP  LFP_4S_BMS_PCB.TXT
Output/BMS_HW_v2/Pick Place/: Pick Place for LFP_4S_BMS_PCB.csv  Pick Place for LFP_4S_BMS_PCB.txt
Photos/: README.md
Software/: README.md
Software/Computer/: README.md
Software/RP2040/: BMS_Firmware.uf2  CMakeLists.txt  I2C.cpp  I2C.h  IO_Define.h  IO_Manager.cpp  IO_Manager.h  MCP3424.cpp  MCP3424.h  README.md  appVariable.h  battStats.cpp  battStats.h  canHandler.cpp  canHandler.h  cell.cpp  cell.h  faultsManager.cpp  faultsManager.h  flashManager.cpp  flashManager.h  main.cpp  systemCore.cpp  systemCore.h  uartHandler.cpp  uartHandler.h
